# RPico_CDC_UART

./: .gitignore  README.md
docs/: cover.xcf  make_profiler_res_pi4sd_1.txt  make_profiler_res_pi4sd_2.txt  make_profiler_res_pi4sd_3.txt  make_profiler_res_pi5sd_1.txt  make_profiler_res_pi5sd_2.txt  make_profiler_res_pi5sd_3.txt  make_profiler_res_pi5ssd_1.txt  make_profiler_res_pi5ssd_2.txt  make_profiler_res_pi5ssd_3.txt  pico_cdc_template.xcf  test_setup.xcf
docs/schematics/: RS485_to_UART_TTL_adapter.xcf  rpico_rs485_ada_schematics.xcf
releases/: rpico_cdc_250000bps_9b.uf2  rpico_cdc_31250bps_9b.uf2  rpico_cdc_41666bps_9b.uf2  rpico_cdc_62500bps_9b.uf2  rpico_cdc_pio_250000bps_9bit.uf2  rpico_cdc_pio_62500bps_9bit.uf2  rpico_cdc_uart.uf2
scripts/: firmware_update.py  firmware_update.sh  jump_boot.py  make_profiler.sh
src/: CMakeLists.txt  cli.c  cli.h  gpio_drv.c  gpio_drv.h  main.c  puart_drv.c  puart_drv.h  puart_rx.pio  puart_tx.pio  uart_ascii.c  uart_ascii.h  uart_drv.c  uart_drv.h  usb_descriptors.c  usb_main.c  usb_main.h  ustime.c  ustime.h  utils.c  utils.h
test/: cmake_func.py  sertest.py  test.py  test_data.py  test_master.py  test_master_list1.py  test_master_list2.py  test_master_list3.py  test_send.py
